# Stellar-DAO

./: .dockerignore  .editorconfig  .env.example  .gitignore  .lintstagedrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  e2e.yml
.husky/: pre-commit
apps/api/: package.json
apps/api/drizzle/: 0000_initial.sql
apps/api/src/: index.ts  server.spec.ts  server.ts
apps/relayer/src/: detector.spec.ts  detector.ts  index.ts  (+3 more)
apps/web/: eslint.config.js  next.config.ts  package.json  playwright.config.ts  test-setup.ts  vitest.config.ts
contracts/: Cargo.toml  deploy-manifest.yml
contracts/bridge/src/: lib.rs  storage.rs  test.rs  verification.rs
contracts/factory/src/: error.rs  lib.rs  registry.rs  test.rs
contracts/governance/: Cargo.toml  README.md
contracts/governance-token/src/: lib.rs
contracts/governance/src/: error.rs  lib.rs
contracts/timelock/: Cargo.toml  README.md
contracts/timelock/src/: error.rs  lib.rs
contracts/wrapper-token/src/: error.rs  lib.rs  metadata.rs
docker/: Dockerfile.api  Dockerfile.relayer  Dockerfile.web
docs/: API.md  BENCHMARKS.md  CONTRIBUTING.md  CRITERIA-BACKEND.md  CRITERIA-CONTRACTS.md  CRITERIA-FRONTEND.md  DEPLOYMENT.md  ENVIRONMENT.md  FAQ.md  GRANT-READINESS.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT.md  SMARTCONTRACTS.md
scripts/: generate-bindings.ts  verify.ts
(+90 files in other folders)
